--- a/jhodge_public/templates/about.jinja2
+++ b/jhodge_public/templates/about.jinja2
@@ -9,6 +9,10 @@
         <div class="big-content black">
             <h1>Jamal J. Hodge</h1>
             <div class="horizontal-bar white"></div>
+            <p class="about-external">
+                Check more about me at <a href="https://iam.film/next/">iam.film/next</a>
+            </p>
+
             <article>
                 <div class="half-width">
                     <p>Emerging from New York's inner-city, in 1999 Jamal Hodge burst onto the independent film scene with his first film, "An African-American in Russia". This exploratory documentary earned numerous awards, introducing Hodge to the film circuit as a daring and insightful artist.</p>
