Added The Jump, and links to trailers for all the films

--- a/jhodge_public/templates/film-single.jinja2
+++ b/jhodge_public/templates/film-single.jinja2
@@ -14,8 +14,7 @@
             <div class="horizontal-bar white"></div>
             <div class="media-meta film">
                 <ul>
-                    <li>{{ the_film.release_date }}</li>
-                    <li>{{ the_film.production }}</li>
+                    <li>Watch the trailer <a href="{{ the_film.trailer }}"><i class="fa fa-film" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <article class="film-description">
