Changed the front page to a news listing

--- a/jhodge_public/static/css/style.css
+++ b/jhodge_public/static/css/style.css
@@ -123,16 +123,16 @@ main {
 #splash-content {
     position: absolute;
     z-index: 99;
-    top: 245px;
+    top: 80px;
     width: 100%;
 }
 
 #splash-content-inner {
-    width: 40%;
-    min-width: 400px;
+    width: 400px;
+    height: 540px;
     padding: 40px 20px;
     background-color: rgba(0,0,0,0.7);
-    margin-left: 10%;
+    margin-left: 13%;
     border: 10px solid rgba(0,0,0,0.3);
 }
 
@@ -140,6 +140,20 @@ main {
     margin-bottom: 10px;
     font-size: 18px;
     color: #BBB;
+}
+#splash h2 {
+    font-size: 35px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+#splash .news-item {
+    line-height: 1.3em;
+    font-size: 16px;
+    margin-bottom: 18px;
+}
+#splash .news-link {
+    margin-left: 8px;
 }
 
 /* OTHER */
