--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -14,6 +14,26 @@
                     <li>Producer</li>
                     <li>omegahodge [at] gmail.com</li>
                 </ul>
+                <div class="horizontal-bar white"></div>
+                <h2>Latest News</h2>
+                <ul id="news-list">
+                    <li class="news-item">
+                        Profile by New York City Lifestyle and Portrait photographer, Zhanna Kurmanova
+                        <a href="http://www.kurmanova.com/the-stories#comp-irs2vqoilink"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="news-item">
+                        Arverne Filmmaker Taking Movie to Cannes Film Festival
+                        <a href="http://www.ny1.com/nyc/queens/news/2016/04/6/arverne-filmmaker-taking-movie-to-cannes-film-festival-.html"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="news-item">
+                        PRO-TV Alum Jamal Hodge's The Kind Ones Heads to Cannes
+                        <a href="http://www.dctvny.org/about/news/16/03/pro-tv-alum-jamal-hodge%E2%80%99s-kind-ones-heads-cannes"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="news-item">
+                        Interview with a Cannes Director: Jamal Hodge
+                        <a href="http://satchelbell.com/blog/2016/5/17/interveiw-with-a-cannes-director-jamal-hodge"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
