--- a/jhodge_public/templates/layout.jinja2
+++ b/jhodge_public/templates/layout.jinja2
@@ -45,11 +45,11 @@
             {% else %}
                 <a href="{{ request.route_url('about') }}"><li>About</li></a>
             {% endif %}
-            {% if contact %}
+<!--             {% if contact %}
                 <a href="{{ request.route_url('contact') }}"><li class="active">Contact</li></a>
             {% else %}
                 <a href="{{ request.route_url('contact') }}"><li>Contact</li></a>
-            {% endif %}
+            {% endif %} -->
 
             </ul>
             <ul id="social-media">
