Changed templates to open external links in new tabs.

--- a/jhodge_public/templates/film-single.jinja2
+++ b/jhodge_public/templates/film-single.jinja2
@@ -20,10 +20,10 @@
                                 <img src="{{ request.static_path('jhodge_public:static/MEDIA/')}}{{ award }}" />
                             {% endif %}
                         {% endfor %}
-                   {% endif %} 
+                   {% endif %}
                 </div>
                 <ul>
-                    <li>Watch the trailer <a href="{{ the_film.trailer }}"><i class="fa fa-film" aria-hidden="true"></i></a></li>
+                    <li>Watch the trailer <a href="{{ the_film.trailer }}" target="_blank"><i class="fa fa-film" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <article class="film-description">
