--- a/jhodge_public/templates/layout.jinja2
+++ b/jhodge_public/templates/layout.jinja2
@@ -19,7 +19,7 @@
         {% elif contact %}
             <title>Jamal Hodge | Contact</title>
         {% else %}
-            <title>Jamal Hodge</title>            
+            <title>Jamal Hodge</title>
         {% endif %}
     </head>
     <body>
@@ -43,7 +43,7 @@
                 <a href="{{ request.route_url('about') }}"><li>About</li></a>
             {% endif %}
             </ul>
-            
+
 <!--             {% if writing %}
                 <a href="{{ request.route_url('writings') }}"><li class="active">Writing</li></a>
             {% else %}
@@ -58,27 +58,27 @@
 
             <ul id="social-media">
                 <li>
-                    <a href="https://www.facebook.com/Primal-Links-Media-151766004494/">
+                    <a href="https://www.facebook.com/Primal-Links-Media-151766004494/" target="_blank">
                         <i class="fa fa-facebook-official"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/directorhodge">
+                    <a href="https://twitter.com/directorhodge" target="_blank">
                         <i class="fa fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/directorh/">
+                    <a href="https://www.instagram.com/directorh/" target="_blank">
                         <i class="fa fa-instagram"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.imdb.com/name/nm0388071/">
+                    <a href="http://www.imdb.com/name/nm0388071/" target="_blank">
                         <img src="{{ request.static_path('jhodge_public:static/STATIC_FILES/imdb-bw.png') }}" />
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/jamal-hodge-891055b">
+                    <a href="https://www.linkedin.com/in/jamal-hodge-891055b" target="_blank">
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
