Added the reel and changed a couple things

--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -37,6 +37,8 @@
             </div>
         </div>
     </section>
+    <section id="reel">
+      <iframe width="800" height="450" src="https://www.youtube.com/embed/yTTBePGm5Ok" frameborder="0" allowfullscreen></iframe>
+    </section>
 </main>
 {% endblock content %}
-
