--- a/jhodge_public/static/css/style.css
+++ b/jhodge_public/static/css/style.css
@@ -156,6 +156,13 @@ main {
     margin-left: 8px;
 }
 
+#reel {
+    text-align: center;
+    padding: 10px 0 20px;
+    background-color: #333;
+}
+
+
 /* OTHER */
 
 #content {
@@ -485,7 +492,7 @@ main {
 .item-writing .red-btn {
     font-size: 1.5em;
     height: 75px;
-    box-sizing: border-box;   
+    box-sizing: border-box;
     padding: 0 20px;
     float: left;
 }*/
@@ -580,7 +587,7 @@ main {
 fieldset:first-child {
     margin-right: 30px;
 }
-#fields input, 
+#fields input,
 #fields textarea,
 #fields label {
     display: block;
@@ -591,7 +598,7 @@ fieldset:first-child {
 #fields input,
 #fields textarea {
     padding: 10px;
-    color: #4e4e4e;    
+    color: #4e4e4e;
 }
 #fields input[type="text"],
 #fields input[type="email"],
