--- a/jhodge_public/static/css/style.css
+++ b/jhodge_public/static/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Helvetica;
     font-weight: lighter;
     min-width: 1000px; /* kill this later */
+    background-color: black;
 }
 
 a {
