--- a/jhodge_public/static/css/style.css
+++ b/jhodge_public/static/css/style.css
@@ -104,7 +104,7 @@ footer {
 main {
 /*    position: relative;
     top: 80px;*/
-    background-color: rgb(234, 234, 234);
+    background-color: rgb(134, 134, 134)
     overflow: hidden;
     min-height: 600px;
 }
