Last styling edit

--- a/jhodge_public/templates/film.jinja2
+++ b/jhodge_public/templates/film.jinja2
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-    <section id="content">
+    <section id="content" style="background-color: white;">
         {% for film in all_films %}
         <div class="row film">
             <div class="film-still">
