Changed email on the front page

--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -12,7 +12,7 @@
                     <li>Director</li>
                     <li>Writer</li>
                     <li>Producer</li>
-                    <li>omegahodge [at] gmail.com</li>
+                    <li>omegahodge@gmail.com</li>
                 </ul>
                 <div class="horizontal-bar white"></div>
                 <h2>Latest News</h2>
