--- a/jhodge_public/templates/about.jinja2
+++ b/jhodge_public/templates/about.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
 <main>
     <section id="about-banner">
-        <img src="{{ request.static_path('jhodge_public:static/MEDIA/jhodge_about.jpg') }}" />
+        <img src="{{gh_media}}jhodge_about.jpg" />
     </section>
     <section id="content">
         <div class="big-content black">
