--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -18,6 +18,14 @@
                 <h2>Latest News</h2>
                 <ul id="news-list">
                     <li class="news-item">
+                        2016 Award-Winning Filmmakers in the Spotlight
+                        <a href="http://www.spotlighthorrorawards.com/2016filmmakers.html" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="news-item">
+                        The 15th Annual NYC Horror Film Festival
+                        <a href="http://www.sociallysuperlative.com/2016/11/18/the-nyc-horror-film-festival/" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="news-item">
                         Profile by New York City Lifestyle and Portrait photographer, Zhanna Kurmanova
                         <a href="http://www.kurmanova.com/the-stories#comp-irs2vqoilink" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a>
                     </li>
