--- a/jhodge_public/static/css/style.css
+++ b/jhodge_public/static/css/style.css
@@ -623,10 +623,10 @@ fieldset:first-child {
 }
 
 /* FILM SINGLE */
-#film-banner {
+#film-banner, #awards-banner {
     background-color: rgba(45, 45, 45, 0.8);
 }
-#film-banner img {
+#film-banner img, #awards-banner img {
     margin: 0 auto;
     display: block;
 }
@@ -778,4 +778,33 @@ aside .clear-btn:hover {
 
 .about-external a {
     color: red;
+}
+
+
+/* AWARDS PAGE */
+
+#awards-banner {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    background-color: rgba(45, 45, 45, 0.8);
+}
+#awards-banner img {
+    width: 90%;
+    position: relative;
+    top: -10px;
+}
+.award-list {
+    margin: 50px 0 20px;
+    text-align: center;
+}
+.award-list h2 {
+    font-weight: 700;
+}
+.award-list li {
+    margin: 15px;
+    line-height: 1.4em;
+}
+.award-list strong {
+    font-weight: 700;
 }
