--- a/jhodge_public/templates/awards.jinja2
+++ b/jhodge_public/templates/awards.jinja2
@@ -8,19 +8,119 @@
     <section id="content">
         <div class="big-content black">
           <h1>Awards and Recognition</h1>
-          <h2>Film: The Jump<a href="{{ request.route_url('/film/1') }}" target="_blank"><i class="fa fa-external-link news-link" aria-hidden="true"></i></a></h2>
+          <section class="award-list">
+            <h2>Film: The Jump</h2>
+            <ul>
+              <li>
+                <p><strong>Festival:</strong> Unveiled: Universal Eyes</p>
+                <p><strong>Award:</strong> Official Selection: 2017</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
+                <p><strong>Award:</strong> Official Selection: 2017</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Love >> Film Screenings</p>
+                <p><strong>Award:</strong> Official Selection: 2017</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The Baltimore International Film Festival</p>
+                <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The Blackstar Film Festival</p>
+                <p><strong>Award:</strong> Audience Award - Short Narrative, 2016</p>
+                <p><strong>Award:</strong> Official Selection, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The Martha's Vineyard African American Film Festival</p>
+                <p><strong>Award:</strong> Official Selection, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> Urban World Film Festival</p>
+                <p><strong>Award:</strong> Official Selection, 2016</p>
+              </li>
+              <li>
+                <p><strong>Festival:</strong> The Damn! Film Series</p>
+                <p><strong>Award:</strong> Best Director, 2016</p>
+              </li>
+            </ul>
+          </section>
+
+          <section class="award-list">
+          <h2>Film: The Kind Ones</h2>
           <ul>
             <li>
-              <p><strong>Festival: The Baltimore International Film Festival</strong></p>
-              <p><strong>Award: Audience Choice Award, 2016</strong></p>
+              <p><strong>Festival:</strong> Festival de Cannes</p>
+              <p><strong>Award:</strong> Short Film Corner, 2016</p>
             </li>
             <li>
-              <p><strong>Festival: The Blackstar Film Festival</strong></p>
-              <p><strong>Award: Audience Choice Award, 2016</strong></p>
+              <p><strong>Festival:</strong> Big Apple Film Festival</p>
+              <p><strong>Award:</strong> Official Selection, 2016</p>
             </li>
             <li>
-              <p><strong>Festival: The Damn! Film Series</strong></p>
-              <p><strong>Award: Best Director, 2016</strong></p>
+              <p><strong>Festival:</strong> The NYC Horror Film Festival</p>
+              <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+            </li>
+            <li>
+              <p><strong>Festival:</strong> The Spotlight Film Awards</p>
+              <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+            </li>
+          </ul>
+          </section>
+
+          <section class="award-list">
+          <h2>Film: Threading Needles</h2>
+          <ul>
+            <li>
+              <p><strong>Festival:</strong> East Harlem International Film Festival</p>
+              <p><strong>Award:</strong> Official Selection, 2012</p>
+            </li>
+            <li>
+              <p><strong>Festival:</strong> Los Angeles Movie Awards</p>
+              <p><strong>Award:</strong> Honorable Mention, 2011</p>
+            </li>
+            <li>
+              <p><strong>Festival:</strong> Hollywood Black Film Festival</p>
+              <p><strong>Award:</strong> Official Selection, 2011</p>
+            </li>
+          </ul>
+          </section>
+
+          <section class="award-list">
+          <h2>Film: 5 Dead Men</h2>
+          <ul>
+            <li>
+              <p><strong>Festival:</strong> Katherine Gibbs Music Video Awards</p>
+              <p><strong>Award:</strong> Best of Show, 2006</p>
+            </li>
+          </ul>
+          </section>
+
+          <section class="award-list">
+          <h2>Honorary Award for Film Education</h2>
+          <ul>
+            <li>
+              <p><strong>Festival:</strong> Tribecca Film Festival</p>
+              <p><strong>Award:</strong> Alumnis Award, Urban Visionaries, 2004</p>
+            </li>
+          </ul>
+          </section>
+
+          <section class="award-list">
+          <h2>El Sueño Zapatista Cinco Años Despues</h2>
+          <ul>
+            <li>
+              <p><strong>Festival:</strong> WESTfest Short Film and Video Competition</p>
+              <p><strong>Award:</strong> Best of Show Award, 2002</p>
+            </li>
+            <li>
+              <p><strong>Event:</strong> The Hague Appeal for Peace, Amsterdam</p>
+              <p><strong>Award:</strong> Citation Award, 2001</p>
+            </li>
+            <li>
+              <p><strong>Festival:</strong> San Francisco International Film Festival 2000</p>
+              <p><strong>Award:</strong> Gold Spire Youth Award 2000</p>
             </li>
           </ul>
         </div>
