added the awards page

--- a/jhodge_public/templates/awards.jinja2
+++ b/jhodge_public/templates/awards.jinja2
@@ -64,7 +64,7 @@
             </li>
             <li>
               <p><strong>Festival:</strong> The Spotlight Film Awards</p>
-              <p><strong>Award:</strong> Audience Choice Award, 2016</p>
+              <p><strong>Award:</strong> Gold Award, 2016</p>
             </li>
           </ul>
           </section>
